iml-agent/src/action_plugins/lustre/snapshots/iml_agent__action_plugins__lustre__client__tests__filter-2.snap
---
source: iml-agent/src/action_plugins/lustre/client.rs
expression: "filter_mountpoint(\"/mnt/lustre_clients/foobar1\", fstab)"
---
# /etc/fstab
# blah

/dev/foo        /bar        something   defaults    1 1
1.2.3.4@tcp:/foobar              /mnt/lustre_clients/foobar          lustre      x-systemd.mount-timeout=20m,noauto,_netdev

1.2.3.4:/baz    /qux        nfs         defaults    0 0


