iml-agent/src/action_plugins/lustre/snapshots/iml_agent__action_plugins__lustre__client__tests__filter.snap
---
source: iml-agent/src/action_plugins/lustre/client.rs
expression: "filter_mountpoint(\"/mnt/lustre_clients/foobar\", fstab)"
---
# /etc/fstab
# blah

/dev/foo        /bar        something   defaults    1 1
1.2.3.4@tcp:/foobar1             /mnt/lustre_clients/foobar1         lustre      x-systemd.mount-timeout=20m,_netdev

1.2.3.4:/baz    /qux        nfs         defaults    0 0


